--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
 
     </head>
     <body>
-        <style>
-            input{
-                visibility: hidden;
-                position: fixed;
-            }
-        </style>
+    <canvas id="webgl-background">
         <input type="file">
-
         <script type="text/javascript" src="./main.js"></script>
-    </body>
+	</canvas>
+	</body>
 </html>
